# winterfell

./: .gitignore  .gitmodules  Cargo.toml  README.md  cargo.toml
common/: .Cargo.toml.icloud  Cargo.toml
common/src/: .utils.rs.icloud  errors.rs  fri_utils.rs  lib.rs  options.rs  proof.rs  utils.rs
common/src/context/: mod.rs
common/src/evaluator/: .frame.rs.icloud  .tests.rs.icloud  constraints.rs  frame.rs  mod.rs
common/src/evaluator/assertions/: assertion.rs  constraints.rs  default_evaluator.rs  mod.rs  tests.rs
common/src/evaluator/transition/: mod.rs
common/src/random/: mod.rs  tests.rs
common/src/stark/: composition.rs  context.rs  fri_utils.rs  mod.rs  options.rs  proof.rs  public_coin.rs  queries.rs  random.rs  trace_info.rs
common/src/stark/evaluator/: constraints.rs  mod.rs
crypto/: Cargo.toml  README.md
crypto/benches/: all.rs  hash.rs  lamport.rs  merkle.rs
crypto/src/: .utils.rs.icloud  lib.rs  utils.rs
crypto/src/hash/: mod.rs
crypto/src/hash/rescue/: double.rs  mod.rs  single.rs
crypto/src/lamport/: mod.rs
crypto/src/merkle/: concurrent.rs  concurrent_merkle.rs  mod.rs  proofs.rs  tests.rs
crypto/src/poly_commit/: poly_commit.rs
crypto/src/random/: mod.rs
examples/: Cargo.toml  README.md
examples/benches/: all.rs  fast_fourier_transform.rs  fibonacci.rs  rescue.rs
examples/src/: lib.rs  main.rs  tests.rs  utils.rs
examples/src/anon/: evaluator.rs  mod.rs  trace.rs
examples/src/fast_fourier_transform/: air.rs  mod.rs  prover.rs  tests.rs
examples/src/fast_fourier_transform_raps/: README.md  air.rs  custom_trace_table.rs  mod.rs  prover.rs  tests.rs
examples/src/fibonacci/: evaluator.rs  mod.rs  utils.rs
examples/src/fibonacci/fib2/: evaluator.rs  mod.rs  tests.rs
examples/src/fibonacci/fib8/: evaluator.rs  mod.rs  tests.rs
examples/src/fibonacci/mulfib2/: evaluator.rs  mod.rs  tests.rs
examples/src/fibonacci/mulfib4/: evaluator.rs  mod.rs
examples/src/fibonacci/mulfib8/: evaluator.rs  mod.rs  tests.rs
examples/src/lamport/: evaluator.rs  mod.rs  rescue.rs  signature.rs  tests.rs  trace.rs
examples/src/lamport/aggregate/: assertions.rs  evaluator.rs  mod.rs  trace.rs
examples/src/lamport/multisig/: assertions.rs  evaluator.rs  mod.rs  trace.rs
examples/src/lamport/single/: mod.rs  trace.rs
examples/src/lamport/threshold/: assertions.rs  evaluator.rs  mod.rs  signature.rs  trace.rs
examples/src/merkle/: evaluator.rs  mod.rs  tests.rs  trace.rs
examples/src/pointer_chasing_naive/: air.rs  mod.rs  prover.rs  tests.rs
examples/src/pointer_chasing_ram_comp/: air.rs  mod.rs  prover.rs  tests.rs
examples/src/ram_constraints_only/: air.rs  mod.rs  prover.rs  tests.rs
examples/src/rescue/: evaluator.rs  mod.rs  rescue.rs  tests.rs  trace.rs
examples/src/rescue_raps/: custom_trace_table.rs
examples/src/utils/: fast_fourier_transform.rs  mod.rs  rescue.rs
fractal_examples/: Cargo.toml
fractal_examples/src/: arith_parser_example.rs  arith_parser_main.rs  jsnark_parser_example.rs  lib.rs  sample_r1cs_proof.rs
fractal_indexer/: Cargo.toml
fractal_indexer/src/: arith_parser.rs  arith_reader.rs  errors.rs  index.rs  indexed_matrix.rs  lib.rs  main.rs  r1cs.rs  snark_keys.rs  tests.rs
fractal_utils/: Cargo.toml
fractal_utils/src/: lib.rs  matrix_utils.rs  polynomial_utils.rs  tests.rs
fractal_verifier/: Cargo.toml
fractal_verifier/src/: lib.rs
fractal_verifier/src/lincheck_verifier/: mod.rs
fractal_verifier/src/rowcheck_verifier/: mod.rs
fractal_verifier/src/verifier/: mod.rs
fri/: Cargo.toml
fri/benches/: folding.rs  monolith_prover.rs  prover.rs  prover_concurrent.rs  prover_sequential.rs  quartic.rs
fri/src/: errors.rs  lib.rs  options.rs  proof.rs  utils.rs
fri/src/folding/: mod.rs
fri/src/folding/quartic/: concurrent.rs  mod.rs  tests.rs
fri/src/prover/: channel.rs  mod.rs  tests.rs
fri/src/prover/concurrent/: mod.rs  tests.rs  worker.rs
fri/src/prover/distributed/: manager.rs  messages.rs  mod.rs  partition.rs  tests.rs  worker.rs
fri/src/prover/monolith/: mod.rs  tests.rs
fri/src/prover/sequential/: mod.rs
fri/src/verifier/: channel.rs  context.rs  mod.rs
math/: Cargo.toml  README.md
math/benches/: all.rs  fft.rs  field.rs  polynom.rs
math/src/: errors.rs  lib.rs  utils.rs
math/src/fft/: concurrent.rs  mod.rs  non_generic.rs  serial.rs  tests.rs
math/src/field/: extensions.rs  f128.rs  mod.rs  tests.rs  traits.rs
math/src/field/f128/: extensions.rs  mod.rs  tests.rs
math/src/field/f3/: mod.rs  tests.rs
math/src/field/f4/: mod.rs  tests.rs
math/src/field/f5/: mod.rs  tests.rs
math/src/field/f62/: mod.rs  tests.rs
math/src/field/smallprimefield/: f6.rs  mod.rs  smallprimefieldinstance.rs  tests.rs  traits.rs
math/src/polynom/: mod.rs  tests.rs
math/src/quartic/: mod.rs  tests.rs
math/src/utils/: mod.rs  tests.rs
proof_system/: Cargo.toml
proof_system/src/: helper_traits.rs  lib.rs
prover/: Cargo.toml  README.md
prover/src/: channel.rs  domain.rs  lib.rs  options.rs  proof.rs  prover.rs  utils.rs
prover/src/constraints/: evaluation_table.rs  evaluator.rs
prover/src/distributed/: .mod.rs.icloud  mod.rs
prover/src/distributed/fri/: mod.rs  tests.rs  worker.rs
prover/src/distributed/fri2/: mod.rs  tests.rs  worker.rs
prover/src/evaluator/: mod.rs
prover/src/evaluator/assertions/: mod.rs
prover/src/evaluator/transition/: mod.rs  tests.rs
prover/src/monolith/: domain.rs  generation.rs  mod.rs  tests.rs  types.rs  utils.rs
prover/src/monolith/constraints/: assertions.rs  commitment.rs  constraint_poly.rs  evaluation_table.rs  evaluator.rs  mod.rs  tests.rs  types.rs
prover/src/monolith/deep_fri/: .mod.rs.icloud  composition.rs  composition_poly.rs  fri.rs  mod.rs  quartic.rs
prover/src/tests/: mod.rs
prover/src/trace/: mod.rs  tests.rs  trace_lde.rs
stream/: Cargo.toml
stream/src/: errors.rs  lib.rs  receiver.rs  request.rs  sender.rs  store.rs  utils.rs
stream/src/client/: cli.rs  mod.rs
stream/src/server/: dispatcher.rs  handler.rs  listener.rs  mod.rs  receiver.rs  sender.rs  store.rs
(+94 files in other folders)
