[workspace]
members = [
  "math",
  "crypto",
  "common",
  "fri",
  "prover",
  "verifier",
  "examples",
  "fractal_indexer",
  "fractal_prover",
  "fractal_verifier",
  "fractal_utils",
  "fractal_sumcheck",
  "fractal_proofs"
]

[profile.release]
codegen-units = 1
lto = true

[profile.bench]
codegen-units = 1
lto = true
