[package]
name = "common"
version = "0.1.0"
edition = "2018"

[lib]
bench = false

[dependencies]
displaydoc = "0.1"
rand = "0.8"
math = { path = "../math" }
crypto = { path = "../crypto" }
fri = { path = "../fri" }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
fasthash = "0.4"
