[package]
name = "crypto"
version = "0.1.0"
edition = "2018"

[lib]
bench = false

[[bench]]
name = "hash"
harness = false

[[bench]]
name = "lamport"
harness = false

[[bench]]
name = "merkle"
harness = false

[dependencies]
digest = "0.9.0"
blake3 = "0.3.7"
sha3 = "0.9.1"
serde = { version = "1.0.114", features = ["derive"] }
math = { path = "../math" }
kompact = { git = "https://github.com/kompics/kompact.git", version = "0.10",  default-features = false, features = ["serde_support", "ser_id_64"]}
bytes = "0.5"

[dev-dependencies]
criterion = "0.3.3"
proptest = "0.10.1"
sha2 = "0.9.1"
rand = "0.7.3"
