[package]
name = "crypto"
version = "0.1.0"
edition = "2018"

[lib]
bench = false

[[bench]]
name = "hash"
harness = false

[[bench]]
name = "lamport"
harness = false

[[bench]]
name = "merkle"
harness = false

[dependencies]
digest = "0.9"
blake3 = "0.3"
sha3 = "0.9"
serde = { version = "1.0", features = ["derive"] }
math = { path = "../math" }
fasthash = "0.4"

[dev-dependencies]
criterion = "0.3"
proptest = "1.0"
sha2 = "0.9"
rand = "0.8"
