[package]
name = "winterfell"
version = "0.1.0"
edition = "2018"

[lib]
bench = false

[[bin]]
name = "fibonacci"
path = "src/main.rs"
bench = false

[dependencies]
log = "0.4.11"
env_logger = "0.7.1"
bincode = "1.3.1"
prover = { path = "../prover" }
verifier = { path = "../verifier" }

[dev-dependencies]
criterion = "0.3.3"

[[bench]]
name = "fibonacci"
harness = false
