[package]
name = "winterfell"
version = "0.1.0"
edition = "2018"

[lib]
bench = false

[[bin]]
name = "winterfell"
path = "src/main.rs"
bench = false

[features]
concurrent = ["prover/concurrent"]

[dependencies]
hex = "0.4"
log = "0.4"
env_logger = "0.8"
bincode = "1.3"
blake3 = "0.3"
structopt = "0.3"
serde = { version = "1.0", features = ["derive"] }
common = { path = "../common" }
prover = { path = "../prover" }
verifier = { path = "../verifier" }
math = { path = "../math" }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "fibonacci"
harness = false

[[bench]]
name = "rescue"
harness = false
