[package]
name = "fractal_examples"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[[bin]]
#name = "arith-parser"
#path = "src/arith_parser_main.rs"
#bench = false
#doc = false
[lib]
bench = false

[dependencies]
displaydoc = "0.1.7"
crypto = { version = "0.3.1", path = "../crypto", package = "winter-crypto", default-features = false }
#fractal_indexer = { version = "0.1.0", path = "../fractal_indexer", package = "fractal_indexer", default-features = false }
fri = { version = "0.3.0", path = '../fri', package = "winter-fri", default-features = false }
log = { version = "0.4", default-features = false }
math = { version = "0.3.0", path = "../math", package = "winter-math", default-features = false }
models = { version = "0.1.0", path = "../models", package = "winter-models", default-features = false }
utils = { version = "0.3.0", path = "../utils/core", package = "winter-utils", default-features = false }
fractal_utils = { path = "../fractal_utils" }
fractal_proofs = {path = "../fractal_proofs" }
fractal_indexer = {path = "../fractal_indexer" }
fractal_sumcheck = {path = "../fractal_sumcheck" }
fractal_prover = {path = "../fractal_prover" }
fractal_verifier = {path = "../fractal_verifier" }
serde = { version = "1.0.117", features = ["derive"] }
thiserror = "1.0.22"
regex = "1"
lazy_static = "1.4.0"
sscanf = "0.1.4"
