[package]
name = "fractal_indexer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
bench = false

[dependencies]
displaydoc = "0.1.7"
math = { path = "../math" }
crypto = { path = "../crypto" }
common = { path = "../common" }
fri = { path = "../fri" }
serde = { version = "1.0.117", features = ["derive"] }
thiserror = "1.0.22"
