[package]
name = "fractal_indexer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
bench = false

[dependencies]
displaydoc = "0.1.7"
winter-crypto = "0.1"
winter-utils = "0.1"
winter-math = "0.1"
fri = { path = "../fri" }
math = { path = "../math" }
serde = { version = "1.0.117", features = ["derive"] }
thiserror = "1.0.22"
