[package]
name = "fractal_verifier"
version = "0.1.0"
authors = ["harjasleenmalvai <harjasleen_malvai@brown.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
displaydoc = "0.1.7"
math = { path = "../math" }
crypto = { path = "../crypto" }
common = { path = "../common" }
fri = { path = "../fri" }
fractal_utils = { path = "../fractal_utils" }
fractal_proofs = {path = "../fractal_proofs"}
serde = { version = "1.0.117", features = ["derive"] }
thiserror = "1.0.22"
