[package]
name = "fractal_verifier"
version = "0.1.0"
authors = ["harjasleenmalvai <harjasleen_malvai@brown.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
displaydoc = "0.1.7"
winter-crypto = "0.1"
winter-utils = "0.1"
winter-math = "0.1"
winter-fri = "0.1"
math = { path = "../math" }
common = { path = "../common" }
fractal_utils = { path = "../fractal_utils" }
fractal_proofs = {path = "../fractal_proofs"}
serde = { version = "1.0.117", features = ["derive"] }
thiserror = "1.0.22"
