[package]
name = "fractal_verifier"
version = "0.1.0"
authors = ["harjasleenmalvai <harjasleen_malvai@brown.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
displaydoc = "0.1.7"
crypto = { version = "0.2", path = "../crypto", package = "winter-crypto", default-features = false }
fri = { version = "0.2", path = '../fri', package = "winter-fri", default-features = false }
log = { version = "0.4", default-features = false }
math = { version = "0.2", path = "../math", package = "winter-math", default-features = false }
utils = { version = "0.2", path = "../utils/core", package = "winter-utils", default-features = false }
fractal_utils = { path = "../fractal_utils" }
fractal_proofs = {path = "../fractal_proofs"}
serde = { version = "1.0.117", features = ["derive"] }
thiserror = "1.0.22"
