[package]
name = "fri"
version = "0.1.0"
edition = "2018"

[lib]
bench = false

[[bench]]
name = "prover"
harness = false


[dependencies]
math = { path = "../math" }
crypto = { path = "../crypto" }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
kompact = { version = "0.10",  default-features = false, features = ["ser_id_64"]}
log = "0.4"
fasthash = "0.4"

[dev-dependencies]
env_logger = "0.8"
criterion = "0.3"
