[package]
name = "fri"
version = "0.1.0"
edition = "2018"

[lib]
bench = false

[[bench]]
name = "monolith_prover"
harness = false

[[bench]]
name = "quartic"
required-features = ["concurrent"]
harness = false

[features]
concurrent = ["rayon", "crypto/concurrent"]

[dependencies]
math = { path = "../math" }
crypto = { path = "../crypto" }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
kompact = { version = "0.10",  default-features = false, features = ["ser_id_64"]}
log = "0.4"
fasthash = "0.4"
thiserror = "1.0"
rayon = { version = "1.5", optional = true }

[dev-dependencies]
env_logger = "0.8"
criterion = "0.3"
