[package]
name = "fri"
version = "0.2.0"
description = "Implementation of FRI protocol for the Winterfell STARK prover/verifier"
authors = ["winterfell contributors"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/novifinancial/winterfell"
documentation = "https://docs.rs/winter-fri/0.2.0"
categories = ["cryptography", "no-std"]
keywords = ["crypto", "polynomial", "commitments"]
edition = "2018"

[lib]
bench = false

[[bench]]
name = "prover"
harness = false

[[bench]]
name = "folding"
harness = false

[features]
concurrent = ["winter-crypto/concurrent", "winter-math/concurrent", "winter-utils/concurrent", "std"]
default = ["std"]
std = ["winter-crypto/std", "winter-math/std", "winter-utils/std"]

[dependencies]
winter-crypto = { version = "0.2", default-features = false }
winter-math = { version = "0.2", default-features = false }
winter-utils = { version = "0.2", default-features = false }

[dev-dependencies]
criterion = "0.3"
winter-rand-utils = "0.2"
