[package]
name = "math"
version = "0.1.0"
edition = "2018"

[lib]
bench = false

[[bench]]
name = "fft"
harness = false

[[bench]]
name = "field"
harness = false

[dependencies]
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
criterion = "0.3.3"
num-bigint = "0.3.1"
