[package]
name = "proof_system"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
displaydoc = "0.1.7"
crypto = { version = "0.2", path = "../crypto", package = "winter-crypto", default-features = false }
log = { version = "0.4", default-features = false }
math = { version = "0.2", path = "../math", package = "winter-math", default-features = false }
