[package]
name = "prover"
version = "0.1.0"
edition = "2018"

[lib]
bench = false

[features]
concurrent = ["crypto/concurrent", "math/concurrent", "fri/concurrent"]

[dependencies]
math = { path = "../math" }
crypto = { path = "../crypto" }
common = { path = "../common" }
fri = { path = '../fri' }
log = "0.4"
