[package]
name = "stream"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "plasma-stream-server"
path = "src/server/mod.rs"

[dependencies]
bytes = "1.0"
hex = "0.4"
structopt = "0.3"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-futures = { version = "0.2" }
tracing-subscriber = "0.2"